fix calendar z-index; change mission_search.jpg screenshot

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -784,7 +784,7 @@ ul {
 }
 
 #ui-datepicker-div {
-  z-index: 5 !important;
+  z-index: 900 !important;
 }
 
 .filtered-mission-index .mission-index .title {
